this is the cokkie handler

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,15 @@
+
 <h1> TinyApp</h1>
+<h2> Login in as : <%=username %> </h2>
+
+
+ <form method="POST" action="/login">
+  Username:
+  <br>
+      <input type="text" placeholder= "username"name="username">
+      <button type="submit" class="btn btn-primary"> Login</button>
+      </form>
+
+
 
 <h2> My URLs </h2>
