--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -13,8 +13,11 @@
   <body style="font-size:20px; padding:50px;">
 
     <% include partials/_header %>
+    <a href="urls_index"> Urls</a>
+     <a href ="urls_show" > create Urls </a>
 
     <h3>Create TinyURL</h3>
+
     <form class="form-inline" action="/urls" method="POST">
       <div class="form-group mb-2">
         <label for="longURL">Enter a URL:</label>
