url edit and delete

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,6 +10,7 @@
   <form method="POST" action="/logout">
 
 <button type="submit" class="btn btn-primary"> Logout</button>
+<a href='/urls/new'>Create a new short URL</a>
       </form>
 
 
