--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -14,12 +14,17 @@
   </header>
 
     <!-- Add EJS code here -->
+    <% if(!urls){ %>
+      <h1> No urls for this user </h1>
+
+
+    <% } %>
     <% for(let keys in urls){ %>
 
       <form method="POST" action="/urls/<%= keys %>/delete">
-         <li><%= keys %> - <%= urls[keys] %>
+         <li><%= keys %> - <%= urls[keys].longURL %>
           <a href="/urls/<%= keys %>">Edit</a>
-          <button type="Edit" class="btn btn-primary"> Edit</button>
+          <button type="Edit" class="btn btn-primary"> Delete</button>
 
 
       </form>
