this is final commit

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -17,8 +17,8 @@
 
       <form method="POST" action="/urls/<%= shortURL %>">
 
-      <input type="text" placeholder= "<%= longURL %>"name="longURL">
-      <button type="submit" class="btn btn-primary"> Update</button>
+        <input type="text" name="longURL" value="<%= longURL %>">
+        <button type="submit" class="btn btn-primary"> Update</button>
       </form>
 
 </body>
