change mode in short urls to link

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,10 +22,7 @@
     <% for(let keys in urls){ %>
 
       <form method="POST" action="/urls/<%= keys %>/delete">
-         <li><%= keys %> - <%= urls[keys].longURL %>
-          <a href="/urls/<%= keys %>">Edit</a>
-          <button type="Edit" class="btn btn-primary">Delete</button>
-
+        <li><a href="<%= urls[keys].longURL %>"><%= keys %></a>  -  <%= urls[keys].longURL %> <a href="/urls/<%= keys %>">Edit</a>  <button type="Edit" class="btn btn-primary">Delete</button>
 
       </form>
     </li>
